manifests/reverse-proxies/teleport-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: teleport
subsets:
  - addresses:
      - ip: 172.16.25.166
    ports:
      - port: 80
        name: tp-web
        protocol: TCP
      - port: 443
        name: tp-tls
        protocol: TCP
      - port: 3023
        name: tp-proxy
        protocol: TCP
      - port: 3024
        name: tp-tun
        protocol: TCP
      - port: 3025
        name: tp-auth
        protocol: TCP
